refactor: centralize event access control and standardize not-found responses
- Add EventAccessValidator as the single source of truth for event-scoped
  access (organization ownership + event availability); ROOT/ADMIN bypass.
  Future subscription-plan rules slot into enforceEventAvailable().
- Route Event/Race/Category/SMS/Participant/Distribution/BatchImport/Stats
  through the central validator; remove the duplicated local validators.
- Disabled events: org users get 403 on all operations (including
  distribution), ROOT/ADMIN keep full access; disabled events still appear
  in list endpoints.
- Cross-organization access now returns 404 identical to a genuine not-found,
  so a resource's existence is not disclosed across organizations.
- Give every *NotFoundException a canonical second-person message with no IDs
  ('The X you requested does not exist.') via a no-arg constructor.
- Reduce updateEvent cognitive complexity; parse the timezone once.

Removes obsolete AuthServiceImplTest and SmsTemplateServiceImplTest.